[package]
name = "todoli"
version = "0.1.0"
edition = "2021"
authors = ["Pablo Lafontaine <pablolafontaine1@gmail.com>"]
license = "MIT"
description = "A tool to make todo lists"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
dirs = "4.0"
colored = "2"
